frontend/apihub-frontend-react/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: apihub-frontend-react
  name: apihub-frontend-react
  namespace: sit
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apihub-frontend-react
  template:
    metadata:
      labels:
        app: apihub-frontend-react
    spec:
      containers:
      - image: tripotadevacr.azurecr.io/apihub-frontend-react:15491
        imagePullPolicy: Always
        name: apihub-frontend-react
        ports:
        - containerPort: 8889
      imagePullSecrets:
      - name: tripota-acr-secret.yaml
