frontend/apihub-frontend-react/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apihub-frontend-react-svc
  namespace: development
spec:
  selector:
    app: apihub-frontend-react
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
